<resources>
    <string name="app_name">Dipak Optical</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_billListFragment">BillList</string>
    <string name="menu_customerPaymentFragment">CustomerPayment</string>
    <string name="menu_loginFragment">Login</string>
    <string name="menu_logoutFragment">Logout</string>
    <string name="menu_billingFragment">Billing</string>

    <string name="delete_record">Bill record delete!</string>
</resources>